building swagger
