# api/models/user/user.go
@@ -1,7 +1,7 @@
 package user
 
 type User struct {
-	Id       int
-	Username string
-	Password string
+	Id       int	`json:"id" example:"1"`
+	Username string `json:"username" example:"user"`
+	Password string `json:"password" example:"pwd"`
 }
